--- a/kubeconfiguration/ingress.yaml
+++ b/kubeconfiguration/ingress.yaml
@@ -1,9 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: name
+  name: haproxy
+  namespace: haproxy-controller
   annotations:
-    kubernetes.io/ingress.class: "haproxy"
+    spec.ingressClassName: "haproxy"
 spec:
   rules:
     - host: app.com
@@ -13,6 +14,6 @@ spec:
           pathType: Exact
           backend:
             service:
-              name: my-service
-              port: 
-                number: 8080
+              name: mongo-express-service
+              port:
+                number: 8081
