--- a/kubeconfiguration/mongo-express.yaml
+++ b/kubeconfiguration/mongo-express.yaml
@@ -14,6 +14,13 @@ spec:
       labels:
         app: mongo-express
     spec:
+      hostAliases:
+        - ip: "10.0.0.117"
+          hostnames:
+            - "mongo"
+            - "mongodb-service"
+            - "mongodb-service.default"
+            - "mongodb-service.default.svc.cluster.local"
       containers:
       - name: mongo-express
         image: mongo-express
