--- a/configs/kubelet-config.yaml
+++ b/configs/kubelet-config.yaml
@@ -25,4 +25,4 @@ tlsCertFile: "/var/lib/kubelet/kubelet.crt"
 tlsPrivateKeyFile: "/var/lib/kubelet/kubelet.key"
 clusterDNS:
   - 10.0.0.10
-clusterDomain: cluster.loca
+clusterDomain: cluster.local
