--- a/kubeconfiguration/ingress-controller.yml
+++ b/kubeconfiguration/ingress-controller.yml
@@ -54,16 +54,18 @@ metadata:
   name: haproxy-ingress
   namespace: haproxy-controller
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: haproxy-ingress
   ports:
     - name: http
       port: 80
       targetPort: 80
+      nodePort: 30080
     - name: https
       port: 443
       targetPort: 443
+      nodePort: 30443
 ---
 apiVersion: v1
 kind: ConfigMap
