--- a/kubeconfiguration/ingress-controller.yml
+++ b/kubeconfiguration/ingress-controller.yml
@@ -1,19 +1,14 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: haproxy-controller
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: haproxy-ingress
-  namespace: haproxy-controller
+  namespace: default
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: haproxy-ingress
-  namespace: haproxy-controller
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -56,7 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: haproxy-ingress
-  namespace: haproxy-controller
+  namespace: default
 spec:
   type: NodePort
   selector:
@@ -65,17 +60,17 @@ spec:
     - name: http
       port: 80
       targetPort: 80
-      nodePort: 30080
+      nodePort: 30081
     - name: https
       port: 443
       targetPort: 443
-      nodePort: 30443
+      nodePort: 31443
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: haproxy-ingress-config
-  namespace: haproxy-controller
+  namespace: default
 data:
   # optional HAProxy config overrides
   log-level: info
@@ -84,7 +79,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: haproxy-ingress-default-backend
-  namespace: haproxy-controller
+  namespace: default
 spec:
   type: ClusterIP
   ports:
