--- a/kubeconfiguration/ingress.yaml
+++ b/kubeconfiguration/ingress.yaml
@@ -1,19 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: haproxy
-  namespace: haproxy-controller
+  name: mongo-express-ingress
+  namespace: default
   annotations:
-    spec.ingressClassName: "haproxy"
+    kubernetes.io/ingress.class: "haproxy"
 spec:
   rules:
-    - host: app.com
-      http:
+    - http:
         paths:
-        - path: /
-          pathType: Exact
-          backend:
-            service:
-              name: mongo-express-service
-              port:
-                number: 8081
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: mongo-express-service
+                port:
+                  number: 8081
