--- a/kubeconfiguration/mongo-express.yaml
+++ b/kubeconfiguration/mongo-express.yaml
@@ -14,18 +14,17 @@ spec:
       labels:
         app: mongo-express
     spec:
-      hostAliases:
-        - ip: "10.0.0.117"
-          hostnames:
-            - "mongo"
-            - "mongodb-service"
-            - "mongodb-service.default"
-            - "mongodb-service.default.svc.cluster.local"
       containers:
       - name: mongo-express
         image: mongo-express
         ports:
         - containerPort: 8081
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8081
+          initialDelaySeconds: 5
+          periodSeconds: 5
         env:
         - name: ME_CONFIG_MONGODB_ADMINUSERNAME
           valueFrom:
