--- a/kubeconfiguration/coredns.yaml
+++ b/kubeconfiguration/coredns.yaml
@@ -1,32 +1,67 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: kube-system
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: coredns
   namespace: kube-system
 ---
-apiVersion: v1
-kind: Service
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
-  name: kube-dns
+  name: system:coredns
+rules:
+- apiGroups: [""]
+  resources:
+  - endpoints
+  - services
+  - pods
+  - namespaces
+  verbs:
+  - list
+  - watch
+- apiGroups: ["discovery.k8s.io"]
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: system:coredns
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:coredns
+subjects:
+- kind: ServiceAccount
+  name: coredns
+  namespace: kube-system
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: coredns
   namespace: kube-system
   labels:
     k8s-app: kube-dns
-spec:
-  selector:
-    k8s-app: coredns
-  clusterIP: 10.0.0.10
-  ports:
-    - name: dns
-      port: 53
-      protocol: UDP
-    - name: dns-tcp
-      port: 53
-      protocol: TCP
+data:
+  Corefile: |
+    .:53 {
+        errors
+        health
+        ready
+        kubernetes cluster.local in-addr.arpa ip6.arpa {
+           pods insecure
+           fallthrough in-addr.arpa ip6.arpa
+        }
+        prometheus :9153
+        forward . 10.10.85.103 10.10.85.104 10.10.85.108
+        cache 30
+        loop
+        reload
+        loadbalance
+    }
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -45,6 +80,8 @@ spec:
       labels:
         k8s-app: coredns
     spec:
+      hostNetwork: true
+      dnsPolicy: Default
       serviceAccountName: coredns
       tolerations:
       - key: "node-role.kubernetes.io/control-plane"
@@ -94,26 +131,20 @@ spec:
               path: Corefile
 ---
 apiVersion: v1
-kind: ConfigMap
+kind: Service
 metadata:
-  name: coredns
+  name: kube-dns
   namespace: kube-system
   labels:
     k8s-app: kube-dns
-data:
-  Corefile: |
-    .:53 {
-        errors
-        health
-        ready
-        kubernetes cluster.local in-addr.arpa ip6.arpa {
-           pods insecure
-           fallthrough in-addr.arpa ip6.arpa
-        }
-        prometheus :9153
-        forward . /etc/resolv.conf
-        cache 30
-        loop
-        reload
-        loadbalance
-    }
+spec:
+  selector:
+    k8s-app: coredns
+  clusterIP: 10.0.0.10
+  ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
