--- a/kubeconfiguration/ingress-controller.yml
+++ b/kubeconfiguration/ingress-controller.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -10,7 +11,7 @@ metadata:
   name: haproxy-ingress
   namespace: default
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: haproxy-ingress
@@ -22,34 +23,41 @@ spec:
       serviceAccountName: haproxy-ingress
       containers:
         - name: haproxy-ingress
-          image: haproxytech/kubernetes-ingress:latest
-          securityContext:
-            capabilities:
-              add: ["NET_BIND_SERVICE"]
+          image: haproxytech/kubernetes-ingress:3.0.6
           args:
-            - --default-backend-service=$(POD_NAMESPACE)/haproxy-ingress-default-backend
-            - --ingress-class=haproxy
-            - --publish-service=default/haproxy-ingress
+            - --configmap=default/haproxy-ingress-config
+            - --http-port=8080
+            - --https-port=8443
+            - --default-backend-service=default/nginx-service
+            - --maps-dir=/etc/haproxy/maps
+            - --disable-backend-health-checks=true
+          ports:
+            - name: http
+              containerPort: 80
+            - name: https
+              containerPort: 443
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop: ["ALL"]
+              add: ["NET_BIND_SERVICE"]
+          volumeMounts:
+            - name: maps-dir
+              mountPath: /etc/haproxy/maps
           env:
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
             - name: POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-          resources:
-            requests:
-              memory: "128Mi"
-              cpu: "100m"
-            limits:
-              memory: "256Mi"
-              cpu: "500m"
-          ports:
-            - containerPort: 80
-            - containerPort: 443
-          # Liveness probe removed to avoid crash loops
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+      volumes:
+        - name: maps-dir
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
@@ -76,18 +84,10 @@ metadata:
   name: haproxy-ingress-config
   namespace: default
 data:
-  publish-service: "default/haproxy-ingress"
-  log-level: info
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: haproxy-ingress-default-backend
-  namespace: default
-spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app: haproxy-ingress
+  # optional tweaks, leave minimal for now
+  syslog-endpoint: "stdout"
+  ssl-redirect: "false"
+  max-connections: "2000"
+  ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384"
+  disable-backend-health-checks: "true"
+  backend-check-status: "200,401"
