--- a/kubeconfiguration/ingress-rbac.yaml
+++ b/kubeconfiguration/ingress-rbac.yaml
@@ -33,11 +33,27 @@ metadata:
   name: haproxy-ingress-clusterrole
 rules:
   - apiGroups: [""]
-    resources: ["pods", "services", "endpoints", "nodes", "secrets"]
+    resources:
+      - pods
+      - services
+      - endpoints
+      - nodes
+      - secrets
+      - configmaps
+      - namespaces
     verbs: ["get", "list", "watch"]
+
+  - apiGroups: ["discovery.k8s.io"]
+    resources:
+      - endpointslices
+    verbs: ["get", "list", "watch"]
+
   - apiGroups: ["networking.k8s.io"]
-    resources: ["ingresses"]
+    resources:
+      - ingresses
+      - ingressclasses
     verbs: ["get", "list", "watch"]
+
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
     verbs: ["get", "list", "watch"]
