--- a/kubeconfiguration/ingress-controller.yml
+++ b/kubeconfiguration/ingress-controller.yml
@@ -33,9 +33,11 @@ spec:
             - --disable-backend-health-checks=true
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
+              hostPort: 8080
             - name: https
-              containerPort: 443
+              containerPort: 8443
+              hostPort: 8443
           securityContext:
             runAsUser: 0
             runAsGroup: 0
@@ -65,18 +67,16 @@ metadata:
   name: haproxy-ingress
   namespace: default
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: haproxy-ingress
   ports:
     - name: http
       port: 80
       targetPort: 8080
-      nodePort: 30080
     - name: https
       port: 443
       targetPort: 8443
-      nodePort: 30443
 ---
 apiVersion: v1
 kind: ConfigMap
