--- a/ca.conf
+++ b/ca.conf
@@ -46,43 +46,43 @@ CN = service-accounts
 # that identifies them as being in the `system:nodes` group, with a username
 # of `system:node:<nodeName>`.
 
-[node-0]
-distinguished_name = node-0_distinguished_name
+[node01]
+distinguished_name = node01_distinguished_name
 prompt             = no
-req_extensions     = node-0_req_extensions
+req_extensions     = node01_req_extensions
 
-[node-0_req_extensions]
+[node01_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "Node-0 Certificate"
-subjectAltName       = DNS:node-0, IP:127.0.0.1
+nsComment            = "Node01 Certificate"
+subjectAltName       = DNS:node01, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node-0_distinguished_name]
-CN = system:node:node-0
+[node01_distinguished_name]
+CN = system:node:node01
 O  = system:nodes
 C  = US
 ST = Washington
 L  = Seattle
 
-[node-1]
-distinguished_name = node-1_distinguished_name
+[node02]
+distinguished_name = node02_distinguished_name
 prompt             = no
-req_extensions     = node-1_req_extensions
+req_extensions     = node02_req_extensions
 
-[node-1_req_extensions]
+[node02_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "Node-1 Certificate"
-subjectAltName       = DNS:node-1, IP:127.0.0.1
+nsComment            = "Node02 Certificate"
+subjectAltName       = DNS:node02, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node-1_distinguished_name]
-CN = system:node:node-1
+[node02_distinguished_name]
+CN = system:node:node02
 O  = system:nodes
 C  = US
 ST = Washington
@@ -188,8 +188,8 @@ DNS.1 = kubernetes.default
 DNS.2 = kubernetes.default.svc
 DNS.3 = kubernetes.default.svc.cluster
 DNS.4 = kubernetes.svc.cluster.local
-DNS.5 = server.kubernetes.local
-DNS.6 = api-server.kubernetes.local
+DNS.5 = controlplane.kubernetes.local
+DNS.6 = api-controlplane.kubernetes.local
 
 [kube-api-server_distinguished_name]
 CN = kubernetes
