--- a/kubeconfiguration/4-ingress-controller.yml
+++ b/kubeconfiguration/4-ingress-controller.yml
@@ -11,7 +11,7 @@ metadata:
   name: haproxy-ingress
   namespace: default
 spec:
-  replicas: 2
+  replicas: 6
   selector:
     matchLabels:
       app: haproxy-ingress
@@ -38,7 +38,6 @@ spec:
             - --https-port=8443
             - --default-backend-service=default/nginx-service
             - --maps-dir=/etc/haproxy/maps
-            - --disable-backend-health-checks=true
           ports:
             - name: http
               containerPort: 8080
@@ -75,7 +74,7 @@ metadata:
   name: haproxy-ingress
   namespace: default
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: haproxy-ingress
   ports:
@@ -97,7 +96,6 @@ data:
   ssl-redirect: "false"
   max-connections: "2000"
   ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384"
-  disable-backend-health-checks: "true"
   backend-check-status: "200,401"
   use-forwarded-for: "true"
   healthz-port: "0"            # disables health endpoint
