--- a/kubeconfiguration/6-ingress-mongoexpress.yaml
+++ b/kubeconfiguration/6-ingress-mongoexpress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mongo-express-ingress
-  namespace: default
+  namespace: cert-manager
   annotations:
     haproxy.org/check: "disabled"
     haproxy.org/backend-config-snippet: |
