--- a/kubeconfiguration/3-mongo-express.yaml
+++ b/kubeconfiguration/3-mongo-express.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-express
+  namespace: cert-manager
   labels:
     app: mongo-express
 spec:
@@ -40,6 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-express-service
+  namespace: cert-manager
 spec:
   selector:
     app: mongo-express
