--- a/kubeconfiguration/7-nginx-fallback.yaml
+++ b/kubeconfiguration/7-nginx-fallback.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  namespace: cert-manager
 spec:
   selector:
     app: nginx
@@ -15,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: default
+  namespace: cert-manager
 spec:
   replicas: 1
   selector:
