--- a/kubeconfiguration/c-hetzner-webhook-rbac.yaml
+++ b/kubeconfiguration/c-hetzner-webhook-rbac.yaml
@@ -1,20 +1,20 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: cert-manager-webhook-hetzner-acme-adata-de
+  name: cert-manager-webhook-hetzner-acme-thekor-eu
 rules:
-- apiGroups: ["acme.adata.de"]
+- apiGroups: ["acme.hetzner.com"]
   resources: ["*"]
   verbs: ["create","get","list","watch","update","patch","delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: cert-manager-webhook-hetzner-acme-adata-de
+  name: cert-manager-webhook-hetzner-acme-thekor-eu
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cert-manager-webhook-hetzner-acme-adata-de
+  name: cert-manager-webhook-hetzner-acme-thekor-eu
 subjects:
 - kind: ServiceAccount
   name: cert-manager-webhook-hetzner
