--- a/kubeconfiguration/e-wildcard-cert.yaml
+++ b/kubeconfiguration/e-wildcard-cert.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: wildcard-cloud2-adata-de
+  name: wildcard-thekor
   namespace: cert-manager
 spec:
   secretName: wildcard-cloud2-tls
   issuerRef:
     name: letsencrypt-dns-hetzner
     kind: ClusterIssuer
-  commonName: "*.cloud2.adata.de"
+  commonName: "*.thekor.eu"
   dnsNames:
-  - "*.cloud2.adata.de"
-  - "cloud2.adata.de"
+  - "*.thekor.eu"
+  - "thekor.eu"
